--- a/styles.css
+++ b/styles.css
@@ -1,162 +1,191 @@
-html{
-    cursor: url('cur-dark.png'), auto;	
-    min-width: 629px;
+html{	
+    scroll-behavior: smooth;
 }
 
-@media (max-width:900px) {
-    img#profpic {
-      display: none;
-    }
-  }
-
-#main h1, #aboutme h1, #profimage h1, #portfolio h1, #service h1 {
-    font-family: 'Roboto', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 40px;
-    max-width: 700px;
+body{
+    font-family: 'Circular Std Book', 'sans-serif';
+    color: var(--primary-text);
 }
 
-#main p, #aboutme p, #profimage p, #portfolio p, #service p {
-    font-family: 'Roboto', sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    padding-bottom: 15px;
+h1, h2, h3, h4, h5, h6, p{
+    margin-bottom: 0;
 }
 
-#resume {
-    font-family: 'Roboto', sans-serif;
-    font-style: normal;
-    font-weight: normal;
+.container{
+    width: 88%;
+    padding: 0;
+}
+
+h2.header{
+    font-family: 'Circular Std Black', 'sans-serif';
     font-size: 70px;
-    padding-bottom: 5px;
-    text-align: center;
+    line-height: 1.3;
 }
 
-#aboutme #status, #profimage #status {
-    font-family: 'Ubuntu Mono', monospace;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
+h1{
+    font-family: 'Circular Std Black', 'sans-serif';
+    font-size: 37px;
+    line-height: 1.3;
 }
 
-#aboutme, #profimage, #portfolio, #service {
-    margin-left: 10%;
-    margin-top: 3%;
-    margin-right: 10%;
-}
-#main {
-    margin-right: 10%;
-    margin-left: 10%;
-    margin-top: 3%;
-    max-width: 800px;
+li{
+  font-family: 'Circular Std Medium';
+  font-size: 20px;
+  margin-bottom: 10px;
 }
 
-#main a:hover, #aboutme a:hover, #portfolio a:hover, #profimage a:hover, #service a:hover {
-    opacity: 1.0;
-    background-image: linear-gradient(transparent 10px, #ffee008c 10px);
-    text-decoration: none;
+p{
+    font-family: 'Fakt Normal', 'sans-serif';
+    font-size: 20px;
+    line-height: 1.4;
 }
 
-#resumetext a:hover{
-    opacity: 1.0;
-    background-image: linear-gradient(transparent 10px, #ffee008c 10px);
-    text-decoration: none;
-}
-
-#resume a:hover{
-    opacity: 1.0;
-    text-decoration: none;
-}
-
-a {
-    color: inherit;
-    font-weight: bold;
-    text-decoration: none;
-    -webkit-transition: 0.25s;
-    transition: 0.25s;
-    opacity: 1;
-}
-#main a, #resume a{
-    color: black;
-}
-
-#tamu {
-    color: #500000;
-}
-#ov {
-    color: #0A26A4;
-}
-#tbarm {
-    color: #F95936;
-}
-#blueprint{
-    color: #669395;
-}
-#sos{
-    color: #9AC141;
-}
-#lego{
-    color: #E3000B;
-}
-
-#howdy {
-    text-shadow:
-    -1px 1px #ffee00, 
-    -2px 2px #ffee00, 
-    -3px 3px #ffee00,
-    -4px 4px #ffee00;
-}
-
-#doingthings {
-    color: white;
-    background-image: linear-gradient(transparent 0px, #0A26A4 0px);		
-}
-
-#profpic {
-    border-radius: 50%;
-}
-
-ul{
-    font-family: 'Roboto', sans-serif;
-    font-style: normal;
-    font-weight: normal;
+a{
+    display: inline-block;
+    margin: 0px 40px 0px 0px;
     font-size: 20px;
 }
 
-#contact-footer {
-    display: flex;
-    justify-content: space-evenly;
+.name{
+    font-family: 'Circular Std Black';
+    background-image: linear-gradient(to right, transparent 50%, var(--highlight-green) 50%);
+    background-origin: 0;
+    background-size: 200% 30%;
+    background-repeat: repeat-x;
+    background-position: -100% 80%;
+}
+
+.section-br {
+	margin-top: 20%;
+}
+
+.section-br-small{
+  margin-top: 10%;
+}
+
+a:not(.card-link) {
+    color: var(--primary-text);
+    font-weight: bold;
+    text-decoration: none;
     position: relative;
-    bottom: 2%;
-    width: 100%;
+    display: inline-block;
+    cursor: pointer;
+    outline: none;
+    border-bottom: 2px solid var(--primary-inactive);
+    transition: border ease 0.2s;
 }
 
-#instagram:hover {
-    background-image: linear-gradient(transparent 10px, #FFDC80 10px);		
+a:hover:not(.card-link) {
+    border-bottom: 2px solid var(--highlight-green);
+    text-decoration: none;
+    color:var(--primary-text);
 }
 
-#linkedin:hover {
-    background-image: linear-gradient(transparent 10px, black 10px);	
+:root {
+    --primary-black: #555555;
+    --secondary-black: #868686;
+    --tertiary-black: #aaaaaa;
+    --primary-text: #2e2e2e;
+    --primary-inactive: #e8e8e8;
+    --highlight-green: #9EEBCF;
 }
 
-#github:hover {
-    background-image: linear-gradient(transparent 10px, #6cc644 10px);	
-}
-
-#email:hover {
-    background-image: linear-gradient(transparent 10px, #DB4437 10px);	
-}
-
-.column {
-    float: left;
-    width: 50%;
-    padding: 10px;
+.thumbnail-grid {
+    margin: 4px 0 0 0;
+    padding: 0;
+    list-style: none;
+    display: block;
+    text-align: center;
+    width:100%;
   }
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
+
+.card {
+  background: #FAFAFA;
+  box-shadow: 0 2px 44px 0 rgba(0,0,0,0.14);
+  border-radius: 16px;
+  border: none;
+  width: 450px;
+  height: 480px;
+  margin: auto;
+  position: relative;
+  -webkit-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+  -moz-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+  transition: all 250ms cubic-bezier(.02, .01, .47, 1);
 }
 
+.card:hover {
+  box-shadow: 0px 32px 60px rgba(0, 0, 0, 0.16);
+  transform: translate(0px, -12px) !important;
+  transition-delay: 0s !important;
+  -webkit-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+  -moz-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+  transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+}
+
+.card-pants {
+  text-align: left;
+  position: absolute;
+  top:70%;
+  margin-left: 36px;
+  margin-right: 36px;
+}
+
+.card-title {
+  font-family: "Circular Std Bold" !important;
+  font-size: 24px;
+  color: var(--primary-black);
+  margin-bottom: 12px;
+}
+
+.card-subtitle {
+  font-family: "Circular Std Book" !important;
+  font-size: 14px;
+  color: var(--tertiary-black);
+  margin-bottom: 20px;
+}
+
+.card-content {
+  font-family: 'Fakt Normal', sans-serif;
+  font-weight: 200;
+  font-size: 16px;
+  color: var(--primary-black);
+  line-height: 22px;
+}
+
+.thumbnail-grid li {
+  width: 450px;
+  height: 500px;
+  display: inline-block;
+  margin: 15px;
+}
+
+p.case-head{
+  color: var(--primary-black);
+}
+
+
+.head {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  background-color: var(--primary-inactive);
+}
+
+/* The progress container (grey background) */
+.progress-container {
+  width: 100%;
+  height: 2px;
+  background: var(--primary-inactive);
+}
+
+/* The progress bar (scroll indicator) */
+.progress-bar {
+  height: 4px;
+  background: var(--highlight-green);
+  width: 0%;
+}
+
+.highlight{
+  background-color: rgba(153,235,207,0.4);
+}
