--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ h1, h2, h3, h4, h5, h6, p{
 
 h2.header{
     font-family: 'Circular Std Black', 'sans-serif';
-    font-size: 70px;
+    font-size: 5vw;
     line-height: 1.3;
 }
 
@@ -81,6 +81,10 @@ a:hover:not(.card-link) {
     color:var(--primary-text);
 }
 
+.card-link+.card-link {
+  margin-left: 0;
+}
+
 :root {
     --primary-black: #555555;
     --secondary-black: #868686;
@@ -90,79 +94,9 @@ a:hover:not(.card-link) {
     --highlight-green: #9EEBCF;
 }
 
-.thumbnail-grid {
-    margin: 4px 0 0 0;
-    padding: 0;
-    list-style: none;
-    display: block;
-    text-align: center;
-    width:100%;
-  }
-
-.card {
-  background: #FAFAFA;
-  box-shadow: 0 2px 44px 0 rgba(0,0,0,0.14);
-  border-radius: 16px;
-  border: none;
-  width: 450px;
-  height: 480px;
-  margin: auto;
-  position: relative;
-  -webkit-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
-  -moz-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
-  transition: all 250ms cubic-bezier(.02, .01, .47, 1);
-}
-
-.card:hover {
-  box-shadow: 0px 32px 60px rgba(0, 0, 0, 0.16);
-  transform: translate(0px, -12px) !important;
-  transition-delay: 0s !important;
-  -webkit-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
-  -moz-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
-  transition: all 250ms cubic-bezier(.02, .01, .47, 1);
-}
-
-.card-pants {
-  text-align: left;
-  position: absolute;
-  top:70%;
-  margin-left: 36px;
-  margin-right: 36px;
-}
-
-.card-title {
-  font-family: "Circular Std Bold" !important;
-  font-size: 24px;
-  color: var(--primary-black);
-  margin-bottom: 12px;
-}
-
-.card-subtitle {
-  font-family: "Circular Std Book" !important;
-  font-size: 14px;
-  color: var(--tertiary-black);
-  margin-bottom: 20px;
-}
-
-.card-content {
-  font-family: 'Fakt Normal', sans-serif;
-  font-weight: 200;
-  font-size: 16px;
-  color: var(--primary-black);
-  line-height: 22px;
-}
-
-.thumbnail-grid li {
-  width: 450px;
-  height: 500px;
-  display: inline-block;
-  margin: 15px;
-}
-
 p.case-head{
   color: var(--primary-black);
 }
-
 
 .head {
   position: fixed;
@@ -188,4 +122,213 @@ p.case-head{
 
 .highlight{
   background-color: rgba(153,235,207,0.4);
+}
+
+/* Thumbnail cards credit to: https://tony-jin.com/ */
+/* LARGE SCREEN */
+@media only screen and (min-width: 991px) {
+.thumbnail-grid {
+  margin: 4px 0 0 0;
+  padding: 0;
+  list-style: none;
+  display: block;
+  text-align: center;
+  width:100%;
+}
+
+.card {
+background: #FAFAFA;
+box-shadow: 0 2px 44px 0 rgba(0,0,0,0.14);
+border-radius: 16px;
+border: none;
+width: 450px;
+height: 480px;
+margin: auto;
+position: relative;
+-webkit-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+-moz-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+}
+
+.card:hover {
+box-shadow: 0px 32px 60px rgba(0, 0, 0, 0.16);
+transform: translate(0px, -12px) !important;
+transition-delay: 0s !important;
+-webkit-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+-moz-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+}
+
+.card-pants {
+text-align: left;
+position: absolute;
+top:70%;
+margin-left: 36px;
+margin-right: 36px;
+}
+
+.card-title {
+font-family: "Circular Std Bold" !important;
+font-size: 24px;
+color: var(--primary-black);
+margin-bottom: 12px;
+}
+
+.card-subtitle {
+font-family: "Circular Std Book" !important;
+font-size: 14px;
+color: var(--tertiary-black);
+margin-bottom: 20px;
+}
+
+.card-content {
+font-family: 'Fakt Normal', sans-serif;
+font-weight: 200;
+font-size: 16px;
+color: var(--primary-black);
+line-height: 22px;
+}
+
+.thumbnail-grid li {
+width: 450px;
+height: 500px;
+display: inline-block;
+margin: 15px;
+}
+}
+
+/* MEDIUM SCREEN */
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+.card {
+  background: #FAFAFA;
+  box-shadow: 0 2px 44px 0 rgba(0,0,0,0.14);
+  border-radius: 16px;
+  width: 320px;
+  height: 360px;
+  margin: auto;
+  position: relative;
+  -webkit-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+  -moz-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+  transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+}
+
+.card:hover {
+  box-shadow: 0px 32px 60px rgba(0, 0, 0, 0.16);
+  transform: translate(0px, -12px) !important;
+  transition-delay: 0s !important;
+  -webkit-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+  -moz-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+  transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+}
+
+.card-pants {
+  text-align: left;
+  position: absolute;
+  top:64%;
+  margin-left: 36px;
+  margin-right: 36px;
+}
+
+.card-title {
+  /* portfolio-walker-thumbnail: */
+  /* Mirror Mirror: */
+  font-family: "Circular Std Black" !important;
+  font-size: 18px;
+  color: var(--primary-black);
+  margin-bottom: 4px;
+}
+
+.card-subtitle {
+  /* UX Design, UX Resear: */
+  font-family: "Circular Std Book" !important;
+  font-size: 12px;
+  color: var(--tertiary-black);
+  margin-bottom: 16px;
+}
+
+.card-content {
+  /* Cultivating Mindfuln: */
+  font-family: 'Fakt Normal', sans-serif;
+  font-weight: 200;
+  font-size: 14px;
+  color: var(--primary-black);
+  line-height: 20px;
+}
+
+.thumbnail-grid li {
+  width: 320px;
+  height: 360px;
+  display: inline-block;
+  margin: 15px;
+}
+}
+
+/* MOBILE SCREEN */
+@media only screen and (max-width: 767px) {
+  img#profpic{
+    display: none;
+  }
+  
+  .card {
+    background: #FAFAFA;
+    box-shadow: 0 2px 44px 0 rgba(0,0,0,0.14);
+    border-radius: 16px;
+    width: 320px;
+    height: 360px;
+    margin: auto;
+    position: relative;
+    -webkit-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+    -moz-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+    transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+  }
+
+  .card:hover {
+    box-shadow: 0px 32px 60px rgba(0, 0, 0, 0.16);
+    transform: translate(0px, -12px) !important;
+    transition-delay: 0s !important;
+    -webkit-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+    -moz-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+    transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+  }
+
+  .card-pants {
+    text-align: left;
+    position: absolute;
+    top:64%;
+    margin-left: 36px;
+    margin-right: 36px;
+  }
+
+  .card-title {
+    /* portfolio-walker-thumbnail: */
+    /* Mirror Mirror: */
+    font-family: "Circular Std Black" !important;
+    font-size: 18px;
+    color: var(--primary-black);
+    margin-bottom: 4px;
+  }
+
+  .card-subtitle {
+    /* UX Design, UX Resear: */
+    font-family: "Circular Std Book" !important;
+    font-size: 12px;
+    color: var(--tertiary-black);
+    margin-bottom: 16px;
+  }
+
+  .card-content {
+    /* Cultivating Mindfuln: */
+    font-family: 'Fakt Normal', sans-serif;
+    font-weight: 200;
+    font-size: 14px;
+    color: var(--primary-black);
+    line-height: 20px;
+  }
+
+  .thumbnail-grid li {
+    width: 320px;
+    height: 360px;
+    display: inline-block;
+    margin: 15px;
+  }
 }
