--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,12 @@ h1{
     line-height: 1.3;
 }
 
+h3{
+  font-family: 'Circular Std Bold', 'sans-serif';
+  font-size: 25px;
+  line-height: 1.3;
+}
+
 li{
   font-family: 'Circular Std Medium';
   font-size: 20px;
@@ -44,6 +50,11 @@ a{
     display: inline-block;
     margin: 0px 40px 0px 0px;
     font-size: 20px;
+}
+
+a.inline{
+    display: inline-block;
+    margin: 0px 0px 0px 0px;
 }
 
 .name{
@@ -106,6 +117,14 @@ p.case-head{
   background-color: var(--primary-inactive);
 }
 
+.persona{
+  border-style: solid;
+  border-width: .1em;
+  border-color: var(--primary-inactive);
+  padding: 15px;
+  border-radius: 16px;
+}
+
 /* The progress container (grey background) */
 .progress-container {
   width: 100%;
@@ -120,8 +139,10 @@ p.case-head{
   width: 0%;
 }
 
-.highlight{
+mark{
   background-color: rgba(153,235,207,0.4);
+  padding: 0;
+  color: var(--primary-text);
 }
 
 /* Thumbnail cards credit to: https://tony-jin.com/ */
@@ -177,7 +198,7 @@ margin-bottom: 12px;
 .card-subtitle {
 font-family: "Circular Std Book" !important;
 font-size: 14px;
-color: var(--tertiary-black);
+color: var(--secondary-black);
 margin-bottom: 20px;
 }
 
