--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,16 @@ h1, h2, h3, h4, h5, h6, p{
     padding: 0;
 }
 
+.footer{
+    text-align: center;
+}
+
+.links{
+  font-family: "Circular Std Book" !important;
+  font-size: 14px;
+  color: var(--secondary-black) !important;
+}
+
 h2.header{
     font-family: 'Circular Std Black', 'sans-serif';
     font-size: 5vw;
@@ -35,7 +45,7 @@ h3{
 }
 
 li{
-  font-family: 'Circular Std Medium';
+  font-family: 'Circular Std Book';
   font-size: 20px;
   margin-bottom: 10px;
 }
@@ -71,7 +81,12 @@ a.inline{
 }
 
 .section-br-small{
-  margin-top: 10%;
+  margin-top: 8%;
+}
+
+img.center {
+  display: block;
+  margin: 0 auto;
 }
 
 a:not(.card-link) {
@@ -123,6 +138,7 @@ p.case-head{
   border-color: var(--primary-inactive);
   padding: 15px;
   border-radius: 16px;
+  margin: 1% 3% 1% 3%;
 }
 
 /* The progress container (grey background) */
