--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,16 @@ li{
 p{
     font-family: 'Fakt Normal', 'sans-serif';
     font-size: 20px;
-    line-height: 1.4;
+    line-height: 1.6;
+}
+
+p.quote{
+  font-family: 'Georgia', 'Cambria', "Times New Roman", Times, serif;
+  font-size: 23px;
+  color: var(--secondary-black);
+  margin-left: 15%;
+  margin-right: 15%;
+  line-height: 1.6;
 }
 
 a{
