--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ h2.header{
     font-family: 'Circular Std Black', 'sans-serif';
     font-size: 5vw;
     line-height: 1.3;
+    text-align: justify;
 }
 
 h1{
@@ -90,7 +91,7 @@ a.inline{
 }
 
 .section-br-small{
-  margin-top: 8%;
+  margin-top: 5%;
 }
 
 img.center {
